fix: UWEB-5418 align cancel button correctly

--- a/src/scss/atomic/molecules/_preferences-bar.scss
+++ b/src/scss/atomic/molecules/_preferences-bar.scss
@@ -18,9 +18,6 @@
         .auto-complete__input {
             border-color: $colorGrayLinesNotification;
         }
-        @media (min-width: $mobileLWidth) {
-            margin-top: 0;
-        }
     }
 
     .settings-selector__edit-button {
